# adv-data-comp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
adv_data_comp/: __init__.py  comparator.py  config.py  models.py
adv_data_comp/dev/: generate_fixtures.py
adv_data_comp/engine/: base.py  duckdb_engine.py  polars_engine.py  selector.py
adv_data_comp/explain/: portkey_explainer.py
adv_data_comp/formatters/: _shared.py  base.py  csv_formatter.py  dbt_formatter.py  html_formatter.py  json_formatter.py  markdown_formatter.py  terminal.py  yaml_formatter.py
adv_data_comp/layers/: base.py  format_layer.py  referential_layer.py  schema_layer.py  semantic_layer.py  statistical_layer.py
adv_data_comp/serve/: app.py  routes.py
cli/: main.py
docs/: design-decisions.md  index.md
docs/adr/: 001-five-layer-model.md  002-dual-engine-threshold.md  003-fuzzy-matching-approach.md  004-dbt-output-format.md
tests/: test_api.py  test_cli.py  test_comparator.py  test_config.py  test_csv_formatter.py  test_dbt_formatter.py  test_engine_schema.py  test_engine_selection.py  test_engines.py  test_explain.py  test_fixture_generation.py  test_format_layer.py  test_html_formatter.py  test_json_formatter.py  test_markdown_formatter.py  test_models.py  test_package_api.py  test_referential_layer.py  test_schema_layer.py  test_semantic_layer.py  test_statistical_layer.py  test_terminal_formatter.py  test_yaml_formatter.py
tests/fixtures/: diff_schema_same_data.csv  format_variants_a.csv  (+10 more)
(+3 files in other folders)
